# Sync

./: .gitattributes  .gitignore  CMakeLists.txt  HOW_TO_INSTALL.md  INSTALL.md  README.md  action.sh  build.sh  debug.sh  proto.code-workspace  run.sh  test.sh
rc/: ChangeConfigurationDialog.xrc  ConflictRuleDialog.xrc  DIrectoryViewPanel.xrc  DialogAuthSSH.xrc  GenericPopup.xrc  MainFrame.xrc  NewConfigurationDialog.xrc  NewConflictRuleDialog.xrc  SSHAuthDialog.xrc  dlg_auth_ssh.xrc  menubar.xrc  new_recource.fbp  resource.fbp  resource.xrc
sandbox/: .SyncWhitelist
sandbox2/: a  bbb
src/: CMakeLists.txt  DialogSSHAuth.h  MainFrame.cpp  MainFrame.h  SSHConnector.h  enums.h  main.cpp  proto.cpp  resources.fbp  wx.h
src/cli/: CMakeLists.txt  Global.cpp  MainLoop.cpp  main.cpp
src/gui/: CMakeLists.txt  ChangeConfigurationDialog.cpp  ChangeConfigurationDialog.h  ConflictRuleDialog.cpp  DialogSSHAuth.cpp  DialogSSHAuth.h  EditConfigurationDialog.cpp  EditConflictRuleDialog.cpp  GenericPopup.cpp  MainFrame.cpp  MainFrame.h  Misc.cpp  NewConfigurationDialog.cpp  NewConfigurationDialog.h  NewConflictRuleDialog.cpp  SSHAuthDialog.cpp  SSHConnectorWrap.cpp  main.cpp
src/headers/: CMakeLists.txt  Configuration.h  DBConnector.h  GenericPopup.h  Logger.h  MainFrame.h  NewConfigurationDialog.h  SQLite.h  SSHAuthDialog.h  SSHConnector.h  Utils.h  Zstd.h  wx.h
src/headers/CLI/: CLIAnnouncer.h  Global.h  MainFrame.h  MainLoop.h
src/headers/Domain/: Configuration.h  ConflictRule.h  FileNode.h  HistoryFileNode.h  PairedNode.h
src/headers/GUI/: ChangeConfigurationDialog.h  ConflictRuleDialog.h  EditConfigurationDialog.h  EditConflictRuleDialog.h  GUIAnnouncer.h  GenericPopup.h  MainFrame.h  Misc.h  NewConfigurationDialog.h  NewConflictRuleDialog.h  SSHConnectorWrap.h
src/headers/Lib/: Announcer.h  Blocker.h  Compression.h  Compressor.h  ConflictManager.h  Creeper.h  DBConnector.h  FileSystem.h  General.h  Global.h  Mapper.h  PairingManager.h  SFTPConnector.h  SSHConnector.h  SocketListener.h  SyncManager.h
src/headers/Utils/: Utils.h
src/lib/: Announcer.cpp  Blocker.cpp  CMakeLists.txt  Compression.cpp  Compressor.cpp  Configuration.cpp  ConflictManager.cpp  Creeper.cpp  DBConnector.cpp  FileSystem.cpp  General.cpp  Global.cpp  Mapper.cpp  PairingManager.cpp  SFTPConnector.cpp  SSHConnector.cpp  SocketListener.cpp  SyncManager.cpp
src/lib/domain/: Configuration.cpp  ConflictRule.cpp  FileNode.cpp  HistoryFileNode.cpp  PairedNode.cpp
src/utils/: CMakeLists.txt  Logger.cpp  Logger.h  Utils.cpp  path.cpp
test/: Blocking.cpp  CMakeLists.txt  Creeping.cpp  Mapping.cpp  Pairing.cpp  Syncing.cpp  example_test.cpp  main.cpp
